--- a/.github/workflows/vulnerable.yaml
+++ b/.github/workflows/vulnerable.yaml
@@ -20,14 +20,8 @@ jobs:
       - name: Run flake-checker
         run: flake-checker -f
 
-      - name: Build
-        run: nix build -o result
-
-      - name: Run vulnix
-        uses: spotdemo4/vulnix-action@40360c84234ce8ff01eb90ad9a5a081e15696065 # v1.1.1
-        with:
-          path: result
-          score: 7
+      - name: Run nix-scan
+        run: nix-scan
 
   actions:
     runs-on: ubuntu-24.04
