fix: add GITHUB_TOKEN to env

--- a/.github/workflows/vulnerable.yaml
+++ b/.github/workflows/vulnerable.yaml
@@ -21,6 +21,8 @@ jobs:
         run: flake-checker -f
 
       - name: Run nix-scan
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: nix-scan
 
   actions:
